# rancer

./: .gitattributes  .gitignore  .tarpaulin.toml  AGENTS.md  ARCHITECTURE.md  BUILD_GUIDE.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  INTEGRATION_TESTS.md  Makefile  README.md  REDESIGN.md  SKILLS.md  TODO.md  WINDOWS_BUILD_GUIDE.md  build-linux.sh  build-windows.bat  cobertura.xml  tarpaulin-report.html  tarpaulin-report.json
.github/workflows/: ci.yml
docs/: issues.md  opengl-migration-plan.md  phase4-raster-rendering.md  prd-architecture-deepening.md  technical-debt-fixes.md  window-resize-issue.md
docs/adr/: 001-compositor-extraction.md  002-renderer-extraction.md  003-dead-code-cleanup.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/prd/: prd-icon-hover-fix.md
releases/: LICENSE  RELEASE_NOTES.md  rancer-linux-x86_64
src/: app.rs  app_tests.rs  brush_tool_tests.rs  canvas.rs  commands.rs  compositor.rs  events.rs  export.rs  export_ui.rs  geometry.rs  gl_loader.rs  lib.rs  logger.rs  main.rs  opengl_renderer.rs  preferences.rs  raster_render_tests.rs  render_optimization_tests.rs  renderer.rs  sdl2_event_tests.rs  selection.rs  selection_tests.rs  ui.rs  ui_tests.rs  undo_tests.rs  viewport.rs  window.rs  window_backend.rs  window_gtk4.rs  window_gtk4.rs.bak  window_tests.rs  window_winit.rs
src/brush/: dab.rs  engine.rs  mod.rs  round.rs  square.rs
src/geometry/: mod.rs  stroke.rs  ui_elements.rs
src/shaders/: render.wgsl
src/tools/: brush_tool.rs  brush_tool_tests.rs  mod.rs  selection_tool.rs
src/ui/: egui_impl.rs  egui_integration.rs  icons.rs  mod.rs  state.rs
src/window/: mod.rs  sdl2.rs
