[package]
name = "rancer"
version = "0.0.7"
edition = "2024"
rust-version = "1.94"
description = "A high-performance digital art application built in Rust with cross-platform support"
authors = ["Ctekv1 <ctekv1@github>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ctekv1/rancer"
keywords = ["graphics", "art", "canvas", "drawing"]
categories = ["graphics"]

[dependencies]
winit = "0.30"
wgpu = "28.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
bytemuck = "1.25.0"
raw-window-handle = "0.6"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
image = "0.24"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.9"
glow = "0.14"
libloading = "0.8"
rfd = "0.15"

[target.'cfg(target_os = "windows")'.dependencies]
rfd = "0.15"
