[package]
name = "rancer"
version = "0.0.8"
edition = "2024"
rust-version = "1.94"
description = "A high-performance digital art application built in Rust with cross-platform support"
authors = ["Ctekv1 <ctekv1@github>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ctekv1/rancer"
keywords = ["graphics", "art", "canvas", "drawing"]
categories = ["graphics"]

[dependencies]
sdl2 = { version = "0.38", features = ["bundled"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
image = "0.25"
glow = "0.16"
undo = "0.52"
egui-sdl2 = { version = "0.2", features = ["glow-backend"] }
egui_extras = { version = "0.33", features = ["svg"] }
resvg = "0.45"

[target.'cfg(target_os = "linux")'.dependencies]
rfd = "0.17"

[target.'cfg(target_os = "windows")'.dependencies]
rfd = "0.17"